--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
       body {
         background-color: #f7d7ef;
       }
+      h1 {
+        font-family: FreeMono, monospace;
+        color: #f760d2;
+        font-weight: bold;
+        text-align: center;
+      }
+      h3 {
+        font-family: FreeMono, monospace;
+        color: #fa7ddb;
+       text-align: center;
+      }
+        
+        
     </style>
   </head>
+  <body>
+    <h1>>Дота 3 скачать бесплатно</h1>
+    <h3>слыш пацан или может не пацан не ленись подпишись на канал <br> 
+      лайк поставь если что он выглядит будто палец который направлен вверх</h3>
+  </body>
 </html>
