--- a/index.html
+++ b/index.html
@@ -18,13 +18,32 @@
         color: #fa7ddb;
        text-align: center;
       }
-        
-        
-    </style>
+      .b {
+        background: #ed0c93;
+        border-radius: 5px;
+        color: white;
+        font-size: 30px;
+        font-family: Helvetica, sans-serif;
+        box-shadow: 2px 2px 4px #ed0c93;
+      }
+      .b:hover {
+        background: #fa169f;
+        border-radius: 5px;
+        color: white;
+        font-size: 30px;
+        font-family: Helvetica, sans-serif;
+        box-shadow: 4px 4px 8px #fa169f;
+      }
+         </style>
   </head>
   <body>
-    <h1>>Дота 3 скачать бесплатно</h1>
+    <h1>Дота 3 скачать бесплатно</h1>
     <h3>слыш пацан или может не пацан не ленись подпишись на канал <br> 
       лайк поставь если что он выглядит будто палец который направлен вверх</h3>
+   <div class="b"> 
+    <a href="https://t.me/grrr_72?"> 
+      <button>ПОДПИШИСЬ!</button> 
+    </a>
+   </div>
   </body>
 </html>
