--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       }
       .b {
         background: #ed0c93;
+        text-align: center;
         border-radius: 5px;
         color: white;
         font-size: 30px;
@@ -28,6 +29,7 @@
       }
       .b:hover {
         background: #fa169f;
+        text-align: center;
         border-radius: 5px;
         color: white;
         font-size: 30px;
