--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
       .b {
         background: #ed0c93;
         text-align: center;
+        width: 50px;
+        height: 25px;
         border-radius: 5px;
-        color: white;
+        font-color: white;
         font-size: 30px;
         font-family: Helvetica, sans-serif;
         box-shadow: 2px 2px 4px #ed0c93;
@@ -30,8 +32,10 @@
       .b:hover {
         background: #fa169f;
         text-align: center;
+        width: 50px;
+        height: 25px;
         border-radius: 5px;
-        color: white;
+        font-color: white;
         font-size: 30px;
         font-family: Helvetica, sans-serif;
         box-shadow: 4px 4px 8px #fa169f;
