--- a/index.html
+++ b/index.html
@@ -18,26 +18,24 @@
         color: #fa7ddb;
        text-align: center;
       }
-      .b {
+      button {
         background: #ed0c93;
-        text-align: center;
         width: 50px;
         height: 25px;
         border-radius: 5px;
-        font-color: white;
+        color: white;
         font-size: 30px;
-        font-family: Helvetica, sans-serif;
+        font-family: Helvetica;
         box-shadow: 2px 2px 4px #ed0c93;
       }
-      .b:hover {
+      button:hover {
         background: #fa169f;
-        text-align: center;
         width: 50px;
         height: 25px;
         border-radius: 5px;
-        font-color: white;
+        color: white;
         font-size: 30px;
-        font-family: Helvetica, sans-serif;
+        font-family: Helvetica;
         box-shadow: 4px 4px 8px #fa169f;
       }
          </style>
