--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         font-family: Helvetica;
         box-shadow: 4px 4px 8px #fa169f;
       }
+      .b {
+        text-align: center;
+      }
          </style>
   </head>
   <body>
