--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
       }
       button {
         background: #ed0c93;
-        width: 50px;
-        height: 25px;
+        width: 200px;
+        height: 100px;
+          border: solid #fa169f;
         border-radius: 5px;
         color: white;
         font-size: 30px;
@@ -30,8 +31,9 @@
       }
       button:hover {
         background: #fa169f;
-        width: 50px;
-        height: 25px;
+        width: 200px;
+        height: 100px;
+        border: solid #fa169f;
         border-radius: 5px;
         color: white;
         font-size: 30px;
