--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
         background: #ed0c93;
         width: 200px;
         height: 100px;
-          border: solid #fa169f;
+          border: solid #ed0c93;
         border-radius: 5px;
         color: white;
-        font-size: 30px;
-        font-family: Helvetica;
+        font-size: 25px;
+        font-family: DejaVu Sans Mono, monospace;
         box-shadow: 2px 2px 4px #ed0c93;
       }
       button:hover {
         background: #fa169f;
         width: 200px;
         height: 100px;
-        border: solid #fa169f;
+        border: solid #ed0c93;
         border-radius: 5px;
         color: white;
-        font-size: 30px;
-        font-family: Helvetica;
+        font-size: 25px;
+        font-family: DejaVu Sans Mono, monospace;
         box-shadow: 4px 4px 8px #fa169f;
       }
       .b {
