--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       лайк поставь если что он выглядит будто палец который направлен вверх</h3>
    <div class="b"> 
     <a href="https://t.me/grrr_72?"> 
-      <button>ПОДПИШИСЬ!</button> 
+      <button>подпишись!</button> 
     </a>
    </div>
   </body>
